8329897: Pass Vector API module to IR framework VMs